Fix subsequent notifications not appearing on smaller viewports, add placeholder on file upload while converting image to blob/base64

--- a/client/src/sass/components/_filter-selector.scss
+++ b/client/src/sass/components/_filter-selector.scss
@@ -9,6 +9,7 @@
   position: relative;
 
   &__item {
+    flex-shrink: 0;
     display: flex;
     flex-direction: column;
     cursor: pointer;
